# MaidCafe_Bot

./: .gitignore  LICENSE  PROJECT_PRD.md  README.md  bot.py  config.yaml  install.bat  install.sh  pyproject.toml  requirements.txt  run.bat  run.sh  茉晓说明书.md
mox/: __init__.py  api_client.py  database.py  image_buffer.py  memory_system.py  middleware.py  sender.py  tarot_state.py  token_manager.py
src/plugins/: __init__.py  chat_handler.py  guard.py  image_service.py  punishment_system.py  scheduler_tasks.py  semantic_radar.py  tarot_handler.py  wake_on_name.py
