[project]
name = "mox-maid-cafe-bot"
version = "0.1.0"
description = "茉晓mox - 咖啡店打工女仆 Bot"
requires-python = ">=3.10"
dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-adapter-onebot>=2.2.0",
    "nb-cli>=0.7.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "Pillow>=10.0.0",
    "apscheduler>=3.10.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mox*"]
